...
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="john.admin@abc.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LpD-2t-rbg">
                                    <rect key="frame" x="125" y="82" width="229" height="17"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Ticket" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8b-Mw-8KA">
                                                    <rect key="frame" x="85" y="15" width="151" height="21"/>
                                                    <constraints>
...
                        <viewLayoutGuide key="safeArea" id="N7V-Ve-vUE"/>
                    </view>
                    <navigationItem key="navigationItem" title="Inbox" id="aBr-5G-cuH">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="menu-button" id="EbT-Gw-GQa"/>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="John" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E4z-gD-XaL">
                                                    <rect key="frame" x="21" y="45" width="331" height="19"/>
                                                    <color key="tintColor" red="0.23047833170000001" green="0.20728208449999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </sections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Details" id="sdG-B3-PiG">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="SideBarIcon.png" id="t8r-gk-hum">
                            <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject *" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqB-n2-F9A">
                                                    <rect key="frame" x="19" y="11" width="156" height="21"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ticket Priority *" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxa-vW-vh2">
                                                    <rect key="frame" x="19" y="11" width="156" height="28"/>
                                                    <constraints>
...
                                                        <constraint firstAttribute="height" constant="24" id="28i-Yp-kBw"/>
                                                    </constraints>
                                                    <state key="normal" title="High">
                                                        <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HelpTopic *" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KOY-yU-tcI">
                                                    <rect key="frame" x="19" y="11" width="156" height="28"/>
                                                    <constraints>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" alpha="0.69999998807907104" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Support Query" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IMJ-de-gdQ">
                                                    <rect key="frame" x="24" y="45" width="331" height="19"/>
                                                    <color key="tintColor" red="0.23047833170000001" green="0.20728208449999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ticket Source *" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rsi-pG-1wY">
                                                    <rect key="frame" x="19" y="11" width="156" height="28"/>
                                                    <constraints>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" alpha="0.69999998807907104" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="SLA 2" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I1b-N6-bcd">
                                                    <rect key="frame" x="24" y="45" width="331" height="19"/>
                                                    <color key="tintColor" red="0.23047833170000001" green="0.20728208449999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
