...
                                                var iconSpec = successSpec
                                                iconSpec.iconImage = UIImage(named: "SuccessMessageIcon")
                                                
                                                self.rControl.showMessage(
                                                    withSpec: iconSpec,
                                                    atPosition: .navBarOverlay, // .top // .bottom
                                                    title: "Done",
                                                    body: " Replied successfully..!",
                                                    viewController: navigationController
                                                )
                                               
                                                NotificationCenter.default.post(name: Notification.Name("reload"), object: nil)
                                                self.view.setNeedsDisplay()
...
