...

        // Do any additional setup after loading the view.
        
        self.title = "Details"

      
        let editImage    = UIImage(named: "pencileEdit")!
        let editTicketButton   = UIBarButtonItem(image: editImage,  style: .plain, target: self, action: #selector(self.editTicketButtonClicked) )
        
        navigationItem.rightBarButtonItems = [editTicketButton]
    
        
        self.currentViewController = self.storyboard?.instantiateViewController(withIdentifier: "ConversationViewControllerID") as! ConversationViewController
...
